--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Poppins:wght@300&display=swap');
 *{
   align-items: center;
   justify-content: center;
@@ -48,6 +49,7 @@ body{
   background-color: #f3e6ff;
 }
 h1{
+  font-family: kanit;
   justify-content: center;
   text-align: center;
   color: #36454F;
