--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,8 @@ body{
   background-image: url('./assets/home-bg.jpg');
   background-repeat: no-repeat;
   display: flex;
-  margin: 3rem;
-  z-index: -1;
+  /* margin: 3rem; */
+  /* z-index: -1; */
   /* background-color: #f3e6ff; */
 }
 h1{
